--- a/Pear/Controllers/Discovery Flow/ChatRequestEndorsementViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/ChatRequestEndorsementViewController.storyboard
@@ -1,7 +1,119 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C9V-aj-VkA">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Chat Request Endorsement View Controller-->
+        <scene sceneID="yNc-e3-Kjc">
+            <objects>
+                <viewController id="C9V-aj-VkA" customClass="ChatRequestEndorsementViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dSb-zD-bge">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3mZ-uT-lrx">
+                                <rect key="frame" x="20" y="300" width="335" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="pfF-OW-Gpx"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxr-6t-smo">
+                                <rect key="frame" x="20" y="167" width="335" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zn-Cj-cxz">
+                                <rect key="frame" x="20" y="140" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hzT-xq-g1h">
+                                <rect key="frame" x="182.5" y="64" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="4Mh-RZ-1SW"/>
+                                    <constraint firstAttribute="width" secondItem="hzT-xq-g1h" secondAttribute="height" multiplier="1:1" id="lhH-ds-uwh"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIL-E4-HyD">
+                                <rect key="frame" x="323" y="56" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="SFn-Ts-CWo"/>
+                                    <constraint firstAttribute="width" constant="40" id="udo-Vh-CcI"/>
+                                </constraints>
+                                <state key="normal" image="onboarding-close-button"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-0X-W7O">
+                                <rect key="frame" x="20" y="203.5" width="335" height="96.5"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kd6-Vd-CUE">
+                                        <rect key="frame" x="4" y="4" width="327" height="88.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="kd6-Vd-CUE" secondAttribute="bottom" constant="4" id="0sd-06-GQy"/>
+                                    <constraint firstItem="kd6-Vd-CUE" firstAttribute="leading" secondItem="Jvj-0X-W7O" secondAttribute="leading" constant="4" id="5Km-g8-ZkL"/>
+                                    <constraint firstAttribute="trailing" secondItem="kd6-Vd-CUE" secondAttribute="trailing" constant="4" id="8zY-qT-CYw"/>
+                                    <constraint firstItem="kd6-Vd-CUE" firstAttribute="top" secondItem="Jvj-0X-W7O" secondAttribute="top" constant="4" id="lfo-eV-jdF"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RD3-KT-Cyv">
+                                <rect key="frame" x="132.5" y="64" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RD3-KT-Cyv" secondAttribute="height" multiplier="1:1" id="8Vz-4W-Wbf"/>
+                                    <constraint firstAttribute="height" constant="60" id="NJW-vT-Fnc"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RD3-KT-Cyv" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" constant="-25" id="0v1-UT-CWH"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="Jvj-0X-W7O" secondAttribute="trailing" constant="20" id="9mG-Is-Ugs"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="bottom" secondItem="3mZ-uT-lrx" secondAttribute="bottom" constant="16" id="CQC-ts-QTu"/>
+                            <constraint firstItem="RD3-KT-Cyv" firstAttribute="centerY" secondItem="hzT-xq-g1h" secondAttribute="centerY" id="JN2-7K-cxM"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="4zn-Cj-cxz" secondAttribute="trailing" constant="20" id="L3F-ZS-MBz"/>
+                            <constraint firstItem="RD3-KT-Cyv" firstAttribute="width" secondItem="RD3-KT-Cyv" secondAttribute="height" multiplier="1:1" id="MWC-bD-uci"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="3mZ-uT-lrx" secondAttribute="trailing" constant="20" id="NL6-KM-mp0"/>
+                            <constraint firstItem="4zn-Cj-cxz" firstAttribute="top" secondItem="hzT-xq-g1h" secondAttribute="bottom" constant="16" id="NXs-yH-so9"/>
+                            <constraint firstItem="oxr-6t-smo" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" id="Qcp-X8-ogX"/>
+                            <constraint firstItem="4zn-Cj-cxz" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="Sz2-Za-p8b"/>
+                            <constraint firstItem="oxr-6t-smo" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="Uk5-tW-l4e"/>
+                            <constraint firstItem="hzT-xq-g1h" firstAttribute="top" secondItem="ROb-MU-bvB" secondAttribute="top" constant="20" id="VEI-3t-hEV"/>
+                            <constraint firstItem="hzT-xq-g1h" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" constant="25" id="fC7-2a-E8P"/>
+                            <constraint firstItem="4zn-Cj-cxz" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" id="i3a-Lr-8KU"/>
+                            <constraint firstItem="3mZ-uT-lrx" firstAttribute="top" secondItem="Jvj-0X-W7O" secondAttribute="bottom" id="jWz-8f-WSe"/>
+                            <constraint firstItem="YIL-E4-HyD" firstAttribute="top" secondItem="ROb-MU-bvB" secondAttribute="top" constant="12" id="kr0-v2-Rzm"/>
+                            <constraint firstItem="Jvj-0X-W7O" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="nQF-Sj-9rb"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="YIL-E4-HyD" secondAttribute="trailing" constant="12" id="oRy-Do-3VF"/>
+                            <constraint firstItem="oxr-6t-smo" firstAttribute="top" secondItem="4zn-Cj-cxz" secondAttribute="bottom" constant="6" id="rKd-1K-S5w"/>
+                            <constraint firstItem="3mZ-uT-lrx" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="tA4-4b-AWf"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="oxr-6t-smo" secondAttribute="trailing" constant="20" id="vOI-jm-Qcj"/>
+                            <constraint firstItem="Jvj-0X-W7O" firstAttribute="top" secondItem="oxr-6t-smo" secondAttribute="bottom" constant="16" id="wUm-UR-X4a"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ROb-MU-bvB"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="400"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TVT-2i-dnE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.95652173913044" y="136.60714285714286"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="onboarding-close-button" width="120" height="120"/>
+    </resources>
 </document>
