--- a/Pear/Controllers/Discovery Flow/ChatRequestPersonalViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/ChatRequestPersonalViewController.storyboard
@@ -1,7 +1,99 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lrj-hF-lm6">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Chat Request Personal View Controller-->
+        <scene sceneID="aC8-YQ-z9f">
+            <objects>
+                <viewController id="lrj-hF-lm6" customClass="ChatRequestPersonalViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gc8-pn-eIc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSk-W5-UQm">
+                                <rect key="frame" x="20" y="334" width="335" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="llF-wq-rlQ"/>
+                                </constraints>
+                                <state key="normal" title="Send Request"/>
+                                <connections>
+                                    <action selector="sendRequestButtonClicked:" destination="lrj-hF-lm6" eventType="touchUpInside" id="pLa-PH-FUI"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V1m-nP-onA">
+                                <rect key="frame" x="20" y="142.5" width="335" height="181.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmy-Rj-6it">
+                                <rect key="frame" x="20" y="116" width="335" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PbQ-vu-Aep">
+                                <rect key="frame" x="147.5" y="20" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PbQ-vu-Aep" secondAttribute="height" multiplier="1:1" id="Hx0-ki-7uQ"/>
+                                    <constraint firstAttribute="height" constant="80" id="lqP-AI-Yff"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bya-JH-lQx">
+                                <rect key="frame" x="323" y="12" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="lx3-eF-DiR"/>
+                                    <constraint firstAttribute="height" constant="40" id="lx9-36-Lhq"/>
+                                </constraints>
+                                <state key="normal" image="onboarding-close-button"/>
+                                <connections>
+                                    <action selector="dismissButtonClicked:" destination="lrj-hF-lm6" eventType="touchUpInside" id="YhD-aA-hht"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="V1m-nP-onA" firstAttribute="leading" secondItem="qgx-kL-znA" secondAttribute="leading" constant="20" id="5no-wh-PWo"/>
+                            <constraint firstItem="qgx-kL-znA" firstAttribute="trailing" secondItem="cmy-Rj-6it" secondAttribute="trailing" constant="20" id="68n-Eq-oVI"/>
+                            <constraint firstItem="ZSk-W5-UQm" firstAttribute="top" secondItem="V1m-nP-onA" secondAttribute="bottom" constant="10" id="6jk-YT-vPQ"/>
+                            <constraint firstItem="cmy-Rj-6it" firstAttribute="leading" secondItem="qgx-kL-znA" secondAttribute="leading" constant="20" id="CFu-w3-ln0"/>
+                            <constraint firstItem="qgx-kL-znA" firstAttribute="trailing" secondItem="ZSk-W5-UQm" secondAttribute="trailing" constant="20" id="NMP-sR-Ji5"/>
+                            <constraint firstItem="qgx-kL-znA" firstAttribute="trailing" secondItem="V1m-nP-onA" secondAttribute="trailing" constant="20" id="OAc-bX-M0X"/>
+                            <constraint firstItem="Bya-JH-lQx" firstAttribute="top" secondItem="qgx-kL-znA" secondAttribute="top" constant="12" id="QMp-HP-lO7"/>
+                            <constraint firstItem="qgx-kL-znA" firstAttribute="bottom" secondItem="ZSk-W5-UQm" secondAttribute="bottom" constant="16" id="Vcv-P2-7J0"/>
+                            <constraint firstItem="PbQ-vu-Aep" firstAttribute="centerX" secondItem="qgx-kL-znA" secondAttribute="centerX" id="bdx-63-hPy"/>
+                            <constraint firstItem="qgx-kL-znA" firstAttribute="trailing" secondItem="Bya-JH-lQx" secondAttribute="trailing" constant="12" id="bzk-1t-dJg"/>
+                            <constraint firstItem="ZSk-W5-UQm" firstAttribute="leading" secondItem="qgx-kL-znA" secondAttribute="leading" constant="20" id="fXB-QJ-rsi"/>
+                            <constraint firstItem="V1m-nP-onA" firstAttribute="top" secondItem="cmy-Rj-6it" secondAttribute="bottom" constant="6" id="m3V-Y9-cxQ"/>
+                            <constraint firstItem="cmy-Rj-6it" firstAttribute="centerX" secondItem="qgx-kL-znA" secondAttribute="centerX" id="mLR-b9-j9C"/>
+                            <constraint firstItem="cmy-Rj-6it" firstAttribute="top" secondItem="PbQ-vu-Aep" secondAttribute="bottom" constant="16" id="rV8-cm-xVf"/>
+                            <constraint firstItem="V1m-nP-onA" firstAttribute="centerX" secondItem="qgx-kL-znA" secondAttribute="centerX" id="wdF-6w-Sxd"/>
+                            <constraint firstItem="PbQ-vu-Aep" firstAttribute="top" secondItem="qgx-kL-znA" secondAttribute="top" constant="20" id="xgD-Ir-kgl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qgx-kL-znA"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="400"/>
+                    <connections>
+                        <outlet property="sendRequestButton" destination="ZSk-W5-UQm" id="vck-As-o2Z"/>
+                        <outlet property="subtitleLabel" destination="V1m-nP-onA" id="uLu-Qz-ZEu"/>
+                        <outlet property="thumbnailImageView" destination="PbQ-vu-Aep" id="qoM-iT-wlL"/>
+                        <outlet property="titleLabel" destination="cmy-Rj-6it" id="m7R-e6-cfT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3i7-8J-aSP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138.40000000000001" y="137.6311844077961"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="onboarding-close-button" width="120" height="120"/>
+    </resources>
 </document>
