Endorsed request finished, api errors displayed

--- a/Pear/Controllers/Discovery Flow/ChatRequestEndorsementViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/ChatRequestEndorsementViewController.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Nunito-Regular.ttf">
+            <string>Nunito-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Chat Request Endorsement View Controller-->
         <scene sceneID="yNc-e3-Kjc">
@@ -19,22 +24,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3mZ-uT-lrx">
-                                <rect key="frame" x="20" y="300" width="335" height="50"/>
+                                <rect key="frame" x="20" y="287" width="335" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="pfF-OW-Gpx"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Make a Pear"/>
                                 <connections>
                                     <action selector="sendRequestButtonClicked:" destination="C9V-aj-VkA" eventType="touchUpInside" id="Shy-Zy-UKD"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxr-6t-smo">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxr-6t-smo">
                                 <rect key="frame" x="20" y="167" width="335" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zn-Cj-cxz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zn-Cj-cxz">
                                 <rect key="frame" x="20" y="140" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -45,6 +50,13 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="4Mh-RZ-1SW"/>
                                     <constraint firstAttribute="width" secondItem="hzT-xq-g1h" secondAttribute="height" multiplier="1:1" id="lhH-ds-uwh"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RD3-KT-Cyv">
+                                <rect key="frame" x="132.5" y="64" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RD3-KT-Cyv" secondAttribute="height" multiplier="1:1" id="8Vz-4W-Wbf"/>
+                                    <constraint firstAttribute="height" constant="60" id="NJW-vT-Fnc"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIL-E4-HyD">
@@ -59,10 +71,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-0X-W7O">
-                                <rect key="frame" x="20" y="203.5" width="335" height="96.5"/>
+                                <rect key="frame" x="20" y="203.5" width="335" height="83.5"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Hello" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kd6-Vd-CUE">
-                                        <rect key="frame" x="4" y="4" width="327" height="88.5"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kd6-Vd-CUE">
+                                        <rect key="frame" x="4" y="4" width="327" height="75.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -76,19 +88,20 @@
                                     <constraint firstItem="kd6-Vd-CUE" firstAttribute="top" secondItem="Jvj-0X-W7O" secondAttribute="top" constant="4" id="lfo-eV-jdF"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RD3-KT-Cyv">
-                                <rect key="frame" x="132.5" y="64" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="RD3-KT-Cyv" secondAttribute="height" multiplier="1:1" id="8Vz-4W-Wbf"/>
-                                    <constraint firstAttribute="height" constant="60" id="NJW-vT-Fnc"/>
-                                </constraints>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="They'll both be notified and will have to accept to chat." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjJ-LL-SUd">
+                                <rect key="frame" x="40" y="341" width="295" height="41"/>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
+                                <color key="textColor" red="0.61960784313725492" green="0.63529411764705879" blue="0.65098039215686276" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="RD3-KT-Cyv" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" constant="-25" id="0v1-UT-CWH"/>
+                            <constraint firstItem="pjJ-LL-SUd" firstAttribute="top" secondItem="3mZ-uT-lrx" secondAttribute="bottom" constant="4" id="65Y-Oo-XQk"/>
                             <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="Jvj-0X-W7O" secondAttribute="trailing" constant="20" id="9mG-Is-Ugs"/>
-                            <constraint firstItem="ROb-MU-bvB" firstAttribute="bottom" secondItem="3mZ-uT-lrx" secondAttribute="bottom" constant="16" id="CQC-ts-QTu"/>
+                            <constraint firstItem="pjJ-LL-SUd" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="40" id="FGl-Dz-VZ6"/>
+                            <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="pjJ-LL-SUd" secondAttribute="trailing" constant="40" id="J8o-AE-h37"/>
                             <constraint firstItem="RD3-KT-Cyv" firstAttribute="centerY" secondItem="hzT-xq-g1h" secondAttribute="centerY" id="JN2-7K-cxM"/>
                             <constraint firstItem="ROb-MU-bvB" firstAttribute="trailing" secondItem="4zn-Cj-cxz" secondAttribute="trailing" constant="20" id="L3F-ZS-MBz"/>
                             <constraint firstItem="RD3-KT-Cyv" firstAttribute="width" secondItem="RD3-KT-Cyv" secondAttribute="height" multiplier="1:1" id="MWC-bD-uci"/>
@@ -98,6 +111,7 @@
                             <constraint firstItem="4zn-Cj-cxz" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="Sz2-Za-p8b"/>
                             <constraint firstItem="oxr-6t-smo" firstAttribute="leading" secondItem="ROb-MU-bvB" secondAttribute="leading" constant="20" id="Uk5-tW-l4e"/>
                             <constraint firstItem="hzT-xq-g1h" firstAttribute="top" secondItem="ROb-MU-bvB" secondAttribute="top" constant="20" id="VEI-3t-hEV"/>
+                            <constraint firstItem="pjJ-LL-SUd" firstAttribute="bottom" secondItem="ROb-MU-bvB" secondAttribute="bottom" constant="16" id="ZCM-3O-qG0"/>
                             <constraint firstItem="hzT-xq-g1h" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" constant="25" id="fC7-2a-E8P"/>
                             <constraint firstItem="4zn-Cj-cxz" firstAttribute="centerX" secondItem="ROb-MU-bvB" secondAttribute="centerX" id="i3a-Lr-8KU"/>
                             <constraint firstItem="3mZ-uT-lrx" firstAttribute="top" secondItem="Jvj-0X-W7O" secondAttribute="bottom" id="jWz-8f-WSe"/>
@@ -114,6 +128,7 @@
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
                         <outlet property="endorsedThumbnailImageView" destination="RD3-KT-Cyv" id="wXD-5q-DZB"/>
+                        <outlet property="inputTextView" destination="kd6-Vd-CUE" id="UdG-r2-6rE"/>
                         <outlet property="sendRequestButton" destination="3mZ-uT-lrx" id="Oko-5E-zkH"/>
                         <outlet property="subtitleLabel" destination="oxr-6t-smo" id="gAG-oR-03z"/>
                         <outlet property="thumbnailImageView" destination="hzT-xq-g1h" id="0Cw-Er-zaS"/>
